adding some styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Smart Phone </title>
 </head>
 <body>
-    <h1>Tinko Smart Phone WhereHouse ltd</h1>
+    <div class="container">
+        <h1>Tinko Smart Phone WhereHouse ltd</h1>
     <table>
         <thead>
             <tr>
@@ -23,20 +24,51 @@
         <tbody>
             <tr>
                 <td>Iphone 13</td>
-                <td><img src="" alt=""></td>
+                <td><img src="./images/samsung.png" alt=""></td>
                 <td>13 pro</td>
                 <td>This is new Iphone </td>
                 <td>2000</td>
             </tr>
             <tr>
                 <td>Samsung Zflip</td>
-                <td><img src="" alt=""></td>
+                <td><img src="./images/samsung.png" alt=""></td>
+                <td>13 pro</td>
+                <td>This is new Iphone </td>
+                <td>2000</td>
+
+            </tr>
+            <tr>
+                <td>Samsung Zflip</td>
+                <td><img src="./images/samsung.png" alt=""></td>
+                <td>13 pro</td>
+                <td>This is new Iphone </td>
+                <td>2000</td>
+
+            </tr>
+            <tr>
+                <td>Samsung Zflip</td>
+                <td><img src="./images/samsung.png" alt=""></td>
+                <td>13 pro</td>
+                <td>This is new Iphone </td>
+                <td>2000</td>
+
+            </tr>
+            <tr>
+                <td>Samsung Zflip</td>
+                <td><img src="./images/samsung.png" alt=""></td>
                 <td>13 pro</td>
                 <td>This is new Iphone </td>
                 <td>2000</td>
 
             </tr>
         </tbody>
-    </table>    
+    </table>
+    <textarea name="" id="myMessage" cols="70" rows="10">Message Us</textarea>
+    <footer>
+        <p>Tinko Smart Phone WhereHouse ltd <span>Our Address: No 33, Romford way United Kingdom post code: Rm5 7at</span></p>
+    </footer>    
+
+    </div>
+    
 </body>
 </html>
