--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
                 <td><img src="./images/samsung.png" alt=""></td>
                 <td>13 pro</td>
                 <td>This is new Iphone </td>
-                <td>2000</td>
+                <td class="myPrice">2000</td>
             </tr>
             <tr>
                 <td>Samsung Zflip</td>
                 <td><img src="./images/samsung.png" alt=""></td>
                 <td>13 pro</td>
                 <td>This is new Iphone </td>
-                <td>2000</td>
+                <td class="myPrice">3800</td>
+                
 
             </tr>
             <tr>
@@ -42,7 +43,7 @@
                 <td><img src="./images/samsung.png" alt=""></td>
                 <td>13 pro</td>
                 <td>This is new Iphone </td>
-                <td>2000</td>
+                <td class="myPrice">1500</td>
 
             </tr>
             <tr>
@@ -50,7 +51,7 @@
                 <td><img src="./images/samsung.png" alt=""></td>
                 <td>13 pro</td>
                 <td>This is new Iphone </td>
-                <td>2000</td>
+                <td class="myPrice">1600</td>
 
             </tr>
             <tr>
@@ -58,17 +59,17 @@
                 <td><img src="./images/samsung.png" alt=""></td>
                 <td>13 pro</td>
                 <td>This is new Iphone </td>
-                <td>2000</td>
+                <td class="myPrice">1200</td>
 
             </tr>
         </tbody>
     </table>
     <textarea name="" id="myMessage" cols="70" rows="10">Message Us</textarea>
     <footer>
-        <p>Tinko Smart Phone WhereHouse ltd <span>Our Address: No 33, Romford way United Kingdom post code: Rm5 7at</span></p>
+        <p >Tinko Smart Phone WhereHouse ltd <span class="address">Our Address: No 33, Romford way United Kingdom post code: Rm5 7at</span></p>
     </footer>    
 
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
